--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: 'latest'
+        python-version: '3.11'
 
     - name: Run Python unit tests
       run: python3 -m unittest discover
