--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,6 +19,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+    
+    - name: install pip
+      run: pip install -- pywin32==227
 
     - name: Run Python unit tests
       run: python3 -m unittest discover
